--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,11 +7,33 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card
+        photoCover=""
+        cardTitle=""
+        cardDescription=""
+        >
+        </app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+            photoCover=""
+            cardTitle=""
+        >
+        </app-small-card>
+        <app-small-card
+            photoCover=""
+            cardTitle=""
+        >
+        </app-small-card>
+        <app-small-card
+        photoCover=""
+        cardTitle=""
+        >
+        </app-small-card>
+        <app-small-card
+        photoCover=""
+        cardTitle=""
+        >
+        </app-small-card>
     </div>
 </div>
