--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,9 +1,8 @@
 
 
-
 <div class="container__big-card">
     <div class="big-card__photo">
-        <img src="https://blog.iprocess.com.br/wp-content/uploads/2021/11/placeholder.png"
+        <img src="{{photoCover}}"
          alt=""
          height="200px"
          srcset=""
@@ -13,13 +12,13 @@
     </div>
 
     <div class="big-card__title">
-        <h1><a href="#">Texto só para o layout</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
 
     </div>
     <div class="big-card__description">
         <p>
             <a href="">
-            etc etc ewt afdaafdfqefa  klfndnfxcnsdjfc lorebn asdjasdnbafbasgcahasf Lorem Ip
+                    {{cardDescription}}
              </a>
         </p>
 
