--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,17 +1,17 @@
 
+
 <div class="container__small-card">
     <div class="container__small-card-content">
         <div class="small-card__photo">
             <img
-             src="https://blog.iprocess.com.br/wp-content/uploads/2021/11/placeholder.png"
+             src="{{photoCover}}"
              alt=""
-             height="200px"
              srcset=""
              >
         </div>
     
         <div class="small-card__title">
-            <h1><a href="#">Texto só para o layout</a></h1>
+            <h1><a href="#">{{cardTitle}}</a></h1>
         </div>
 
     </div>
